--- a/article.html
+++ b/article.html
@@ -19,6 +19,7 @@
         <li>Somalia</li>
         <li>Elections</li>
         <li>International</li>
+        <li>norway</li>
     </ol>
     <ul>
         <li>Mogadishu</li>
